# research-idea-explorer

./: .gitignore  CHANGELOG.md  LICENSE  README.md  package.json  pyproject.toml  setup.py
.claude/commands/: research-idea-explorer.md  rq-explore.md
docs/: README.en.md  README.zh.md  dev.md  feature-guide.zh-en.md  quickstart.en.md  quickstart.zh.md
framework/: architecture.md  research-idea.schema.json  research-state.schema.json
research_idea_explorer/: __init__.py  cli.py  domain.py  engine.py  idea_language.py  install.py  memory.py  preferences.py  presentation.py  providers.py  retrieval.py  sample_data.py  schema.py  similarity.py
skills/research-idea-explorer/: SKILL.md
skills/research-space-explorer/: SKILL.md
skills/rq-explore/: SKILL.md
src/: cli.js  demo.js  idea-language.js  install.js  live-demo.js  query-seed.js  schema.js
src/data/: sample-papers.js  sample-seed.js
src/domain/: personas.js  taxonomy.js
src/engine/: brainstorm.js  critic.js  crystallize.js  dedupe.js  literature-map.js  literature-probe.js  mutate.js  pipeline.js  scoring.js  state.js
src/memory/: graph.js  store.js  view.js
src/presentation/: cards.js  report.js
src/providers/: arxiv.js  base.js  biorxiv.js  crossref.js  europepmc.js  local-formats.js  local.js  nber.js  openalex.js  sciencedirect.js  semanticscholar.js  springer.js  ssrn.js  web.js  zotero.js
src/retrieval/: graph.js  live.js  (+2 more)
test/: cli.test.js  engine.test.js  install.test.js  memory.test.js  providers.test.js
tests/: test_cli.py  test_install.py  test_pipeline.py  test_preferences.py
(+11 files in other folders)
